--- a/index.html
+++ b/index.html
@@ -49,18 +49,57 @@
           </div>
           </nav>
         </div>
-        <div class="col-12">
-          <h1>Bradley Graham</h1>
+        <div class="col-12 p-5">
+          <h1 class="d-inline">Bradley Graham</h1>
           <h2>Software developer</h2>
         </div>
       </div>
     </div>
   </header>
   <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-
+    <div class="bg-green">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 blue-bg">
+            <div class="row">
+              <div class="col-12">
+                <h2>Skills</h2>
+                <p>HTML</p>
+                <div class="progress">
+                  <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>CSS</p>
+                <div class="progress">
+                  <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>HTML</p>
+                <div class="progress">
+                  <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>CSS</p>
+                <div class="progress">
+                  <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-8 d-flex align-items-center">
+            <div class="row">
+              <div class="col-12 col-md-6 d-flex text-right align-items-center justify-content-md-end">
+                <h1>About Me</h1>
+              </div>
+              <div class="col-12 col-md-6 d-flex align-items-center">
+                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odit officia non
+                  nostrum temporibus.
+                  Veniam, laboriosam! At temporibus possimus atque, recusandae nisi animi quaerat sunt, quas harum
+                  eaque, vitae repudiandae.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
