--- a/index.html
+++ b/index.html
@@ -59,30 +59,30 @@
   <main>
     <div class="bg-green">
       <div class="container">
-        <div class="row">
-          <div class="col-4 blue-bg">
+        <div class="row d-flex justify-content-between pt-5 pb-5">
+          <div class="col-4 blue-bg rounded">
             <div class="row">
               <div class="col-12">
                 <h2>Skills</h2>
                 <p>HTML</p>
                 <div class="progress">
-                  <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
                 <p>CSS</p>
                 <div class="progress">
-                  <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
                 <p>HTML</p>
                 <div class="progress">
-                  <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
                 <p>CSS</p>
                 <div class="progress">
-                  <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
               </div>
             </div>
@@ -101,11 +101,48 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-12 col-md-4 project-card">
+            <div class="card-back text-center">
+              <h3 class="card-title-bg">Project</h3>
+              <h5>Description</h5>
+              <div class="btn btn-primary">Link to project</div>
+              <div class="btn btn-primary">Link to code</div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 project-card">
+            <div class="card-back text-center">
+              <h3 class="card-title-bg">Project</h3>
+              <h5>Description</h5>
+              <div class="btn btn-primary">Link to project</div>
+              <div class="btn btn-primary">Link to code</div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 project-card">
+            <div class="card-back text-center">
+              <h3 class="card-title-bg">Project</h3>
+              <h5>Description</h5>
+              <div class="btn btn-primary">Link to project</div>
+              <div class="btn btn-primary">Link to code</div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </main>
   <footer>
-
+    <div class="bg-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col d-flex justify-content-center p-3">
+            <i class="fab fa-html5 fa-2x"></i>
+            <i class="fab fa-css3-alt fa-2x"></i>
+            <i class="fab fa-js fa-2x"></i>
+            <i class="fab fa-github fa-2x"></i>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <!-- Optional JavaScript -->
