--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body>
   <header>
-    <div class="bg-head">
+    <div class="bg-head pt-5 pb-5">
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <!-- <div class="col-12">
             <nav class="navbar navbar-expand-sm navbar-light bg-transparent d-flex justify-content-between">
               <div>
                 <a class="navbar-brand" href="#">Navbar</a>
@@ -48,42 +48,34 @@
               </div>
           </div>
           </nav>
-        </div>
-        <div class="col-12 p-5">
-          <h1 class="d-inline">Bradley Graham</h1>
-          <h2>Software developer</h2>
+        </div> -->
+          <div class="col-12 p-5">
+            <h1 class="d-inline">Bradley Graham</h1>
+            <h2>Software developer</h2>
+          </div>
         </div>
       </div>
-    </div>
   </header>
   <main>
     <div class="bg-green">
       <div class="container">
-        <div class="row d-flex justify-content-between pt-5 pb-5">
+        <div class="row d-flex justify-content-between pt-5 pb-5 mb-5">
           <div class="col-4 blue-bg rounded">
             <div class="row">
               <div class="col-12">
                 <h2>Skills</h2>
-                <p>HTML</p>
-                <div class="progress">
-                  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-                <p>CSS</p>
-                <div class="progress">
-                  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-                <p>HTML</p>
-                <div class="progress">
-                  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-                <p>CSS</p>
-                <div class="progress">
-                  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Bootstrap</li>
+                  <li>JavaScript</li>
+                  <li>NodeJS</li>
+                  <li>Vue</li>
+                  <li>MongoDB</li>
+                  <li>C#</li>
+                  <li>.Net</li>
+                  <li>MySQL</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -93,10 +85,8 @@
                 <h1>About Me</h1>
               </div>
               <div class="col-12 col-md-6 d-flex align-items-center">
-                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odit officia non
-                  nostrum temporibus.
-                  Veniam, laboriosam! At temporibus possimus atque, recusandae nisi animi quaerat sunt, quas harum
-                  eaque, vitae repudiandae.</p>
+                <p class="mb-0">I'm a full stack software developer who loves learning, coding, and problem solving.
+                </p>
               </div>
             </div>
           </div>
@@ -104,26 +94,29 @@
         <div class="row">
           <div class="col-12 col-md-4 project-card">
             <div class="card-back text-center">
-              <h3 class="card-title-bg">Project</h3>
-              <h5>Description</h5>
-              <div class="btn btn-primary">Link to project</div>
-              <div class="btn btn-primary">Link to code</div>
+              <h3 class="card-title-bg">KanBam</h3>
+              <img src="assets/KanBamScreenShot.png" class="img-fluid" alt="">
+              <h5>An online board built for collaboration in teams</h5>
+              <a class="btn btn-success" href="https://kanbam.herokuapp.com" target="_blank">Link to project</a>
+              <a class="btn btn-success" href="https://github.com/BradleyG248/KanBam" target="_blank">Link to code</a>
             </div>
           </div>
           <div class="col-12 col-md-4 project-card">
             <div class="card-back text-center">
-              <h3 class="card-title-bg">Project</h3>
-              <h5>Description</h5>
-              <div class="btn btn-primary">Link to project</div>
-              <div class="btn btn-primary">Link to code</div>
+              <h3 class="card-title-bg">PointOut</h3>
+              <img src="assets/PointOutScreenShot.png" class="img-fluid" alt="">
+              <h5>A social app meant to share points with other users in groups</h5>
+              <a class="btn btn-success" href="https://pointout-dev.herokuapp.com" target="_blank">Link to project</a>
+              <a class="btn btn-success" href="https://github.com/mralext20/pointOut" target="_blank">Link to code</a>
             </div>
           </div>
           <div class="col-12 col-md-4 project-card">
             <div class="card-back text-center">
-              <h3 class="card-title-bg">Project</h3>
-              <h5>Description</h5>
-              <div class="btn btn-primary">Link to project</div>
-              <div class="btn btn-primary">Link to code</div>
+              <h3 class="card-title-bg">Keepr</h3>
+              <!-- <img src="assets/KanBamScreenShot.png" class="img-fluid" alt=""> -->
+              <h5>An app where users can keep posts in vaults they've made</h5>
+              <a class="btn btn-success" href="https://kanbam.herokuapp.com" target="_blank">Link to project</a>
+              <a class="btn btn-success" href="https://github.com/BradleyG248/KanBam" target="_blank">Link to code</a>
             </div>
           </div>
         </div>
@@ -139,6 +132,8 @@
             <i class="fab fa-css3-alt fa-2x"></i>
             <i class="fab fa-js fa-2x"></i>
             <i class="fab fa-github fa-2x"></i>
+            <i class="fab fa-vuejs fa-2x"></i>
+
           </div>
         </div>
       </div>
