added keepr card

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
           <div class="col-12 col-md-4 project-card">
             <div class="card-back text-center">
               <h3 class="card-title-bg">Keepr</h3>
-              <!-- <img src="assets/KanBamScreenShot.png" class="img-fluid" alt=""> -->
+              <img src="assets/KeeprScreenShot.png" class="img-fluid" alt="">
               <h5>An app where users can keep posts in vaults they've made</h5>
-              <a class="btn btn-success" href="https://kanbam.herokuapp.com" target="_blank">Link to project</a>
-              <a class="btn btn-success" href="https://github.com/BradleyG248/KanBam" target="_blank">Link to code</a>
+              <a class="btn btn-success" href="https://keepr56.herokuapp.com" target="_blank">Link to project</a>
+              <a class="btn btn-success" href="https://github.com/BradleyG248/keepr" target="_blank">Link to code</a>
             </div>
           </div>
         </div>
