--- a/index.html
+++ b/index.html
@@ -119,6 +119,16 @@
               <a class="btn btn-success" href="https://github.com/BradleyG248/keepr" target="_blank">Link to code</a>
             </div>
           </div>
+          <div class="col-12 col-md-4 project-card">
+            <div class="card-back text-center">
+              <h3 class="card-title-bg">Lagoon Blog</h3>
+              <img src="assets/Lagoon.png" class="img-fluid" alt="">
+              <h5>An app where users can make posts and comment on them, as well as upvote them</h5>
+              <a class="btn btn-success" href="https://themepark.herokuapp.com/#/" target="_blank">Link to project</a>
+              <a class="btn btn-success" href="https://github.com/BradleyG248/themeparks" target="_blank">Link to
+                code</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
